# deep

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
deep/dataset/: make_dataset.py
deep/features/: build_features.py
deep/models/: deepaas_api.py
deep/tests/: test_unit_model.py
deep/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-deep_start.py2.ipynb  1.0-deep_start.py3.ipynb
