[metadata]
name = deep
summary = tut
description-file =
    README.md
author = schuh
author-email = michael.schuh@desy.de
version = 1.1.1
license = MIT
home-page = https://github.com/SchuhMichael/deep.git/deep
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    deep

[entry_points]

deepaas.model = 
    deep = deep.models.deepaas_api

